# BPE4TS

./: pyproject.toml  readme.md
result/: experiment_grid_results.csv  experiment_grid_results_motif.csv  grammar_analysis.csv
src/: data_loader.py  discretizer.py  find_robust_config.py  hierarchy_viz.py  main.py  metrics.py  metrics_entropy.py  run_entropy_selection.py  semantic_metrics_analysis.py  test_bins_limit.py  test_semantic_sweetspot.py  tokenizer.py  visualization.py  viz_specific_token.py
